@@ -3,6 +3,9 @@ changes may be omitted). For a complete list of changes, see the main
 changelog: https://github.com/wesnoth/wesnoth-old/blob/master/changelog
 
 Version 1.11.5+dev:
+ * Add-ons client:
+   * The Description popup displays the selected add-on's dependencies now,
+     using color-keyed statuses.
  * Language and i18n:
    * Updated translations:
 
