@@ -1,4 +1,7 @@
 Version 1.11.5+dev:
+ * Add-ons client:
+   * The Description popup displays the selected add-on's dependencies now,
+     using color-keyed statuses.
  * Language and i18n:
    * Updated translations:
  * Miscellaneous and bug fixes
